option dialog too big issue ongoing prepare for load rules

--- a/src/content/autoArchive.css
+++ b/src/content/autoArchive.css
@@ -1,15 +1,17 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 @-moz-document regexp("chrome://(awsomeautoarchive|global|messenger)/content/.*") {
-  #awsome_auto_archive-perfpane {
-    overflow: auto;
-  }
+  /* awsome_auto_archive-prefs -> .paneDeckContainer -> deck -> awsome_auto_archive-perfpane -> .content-box -> awsome_auto_archive-tabbox */
   #awsome_auto_archive-prefs {
     min-width: 600px;
     min-height: 500px; /* might be changed by fillIdentities */
   }
-  
-  #awsome_auto_archive-perfpane .content-box  {
-    overflow: visible;
+
+  #awsome_auto_archive-prefs .paneDeckContainer {
+    overflow: auto;
+  }
+
+  #XXawsome_auto_archive-perfpane .content-box {
+    flex: 1;
   }
   
   #awsome_auto_archive-rules {
